2008-01-15  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- Refactor device handling into lightweight "classes", one for each
			device, to focus applet.c more on state handling and general UI
			issues rather than a pile of device-specific code

	* src/menu-items.c
	  src/menu-items.h
		- Removed; though NMNetworkMenuItem was moved to ap-menu-item.c

	* src/ap-menu-item.c
	  src/ap-menu-item.h
		- New files; NMNetworkMenuItem moved here from menu-items.c

	* src/applet-device-gsm.c
	  src/applet-device-gsm.h
	  src/applet-device-wireless.c
	  src/applet-device-wireless.h
	  src/applet-device-wired.c
	  src/applet-device-wired.h
		- Implement the lightweight "classes" for each device type and move over
			the corresponding code from applet.c and menu-items.c

2008-01-14  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- Massive refactor of the NM event handling and tray icon code to
			separate out the event handling bits form the bits that determine
			which icon and tooltip to use

2008-01-14  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (read_one_setting_value_from_gconf): fix memory leaks; need to free
			the value read from GConf after calling g_object_set() becuase the
			g_object_set() call should copy the value, not take ownership

2008-01-13  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (dialog_init): fix memory leak

2008-01-13  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- Rearrange status icon signal handlers to reduce need for prototypes

2008-01-13  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- Rearrange constructor() and finalize() closer to the rest of the
			applet GObject related functions, and move icons-related functions
			there as well to reduce the need to prototypes.

2008-01-13  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.h
	  src/applet-dialogs.c
		- New files; move info and about dialog stuff here

	* src/Makefile.am