@@ -1,3 +1,12 @@
+2008-01-17  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/nm-connection-list.c
+		- (get_connection_for_selection): factor out common code to get a
+			connection from the selected list item
+		- (edit_connection_cb): use get_connection_for_selection()
+		- (delete_connection_cb): implement
+		- (load_connections): remove unused code
+
 2008-01-15  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
